--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.17.3",
-    selenideVersion = "6.5.0",
-    junitVersion = "5.8.2"
+def allureVersion = '2.18.1',
+    selenideVersion = '6.6.6',
+    junitVersion = '5.9.0'
 
 allure {
     report {
@@ -27,12 +27,12 @@ allure {
 
 dependencies {
     testImplementation(
-            "org.aspectj:aspectjweaver:1.9.6",
+            'org.aspectj:aspectjweaver:1.9.9.1',
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "org.aeonbits.owner:owner:1.0.12",
-            "org.assertj:assertj-core:3.19.0",
-            "org.slf4j:slf4j-simple:1.7.29",
+            'org.assertj:assertj-core:3.23.1',
+            'org.slf4j:slf4j-simple:1.7.36',
             "org.junit.jupiter:junit-jupiter:$junitVersion")
 }
 
