--- a/src/test/resources/config/local.properties
+++ b/src/test/resources/config/local.properties
@@ -1,6 +1,6 @@
-browser=chrome
-browserVersion=91.0
-browserSize=1920x1080
+browser=
+browserVersion=
+browserSize=
 browserMobileView=
 #browserMobileView=iPhone X
 remoteDriverUrl=
