--- a/src/test/resources/config/local.properties
+++ b/src/test/resources/config/local.properties
@@ -1,6 +1,6 @@
-browser=
-browserVersion=
-browserSize=
+browser=chrome
+browserVersion=91.0
+browserSize=1920x1080
 browserMobileView=
 #browserMobileView=iPhone X
 remoteDriverUrl=
